--- a/app/src/main/res/layout-land/activity_dashboard.xml
+++ b/app/src/main/res/layout-land/activity_dashboard.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     tools:context=".Dashboard">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
@@ -12,8 +11,8 @@
         android:id="@+id/fullscreen_content"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:keepScreenOn="true"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <LinearLayout
@@ -23,11 +22,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/text_channel_title"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text=""
-                android:id="@+id/text_channel_title" />
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
                 android:id="@+id/text_clock"
@@ -38,26 +37,7 @@
                 android:text="@string/time"
                 android:textSize="72sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/btn_quit"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="@drawable/ic_quit"
-                    android:contentDescription="@string/quit"
-                    android:textSize="48sp" />
-
-                <ImageButton
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:id="@+id/btn_settings"
-                    />
-
-            </LinearLayout>
 
 
         </LinearLayout>
@@ -77,88 +57,44 @@
             android:paddingLeft="8dp"
             android:paddingStart="8dp">
 
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="32dp"
-                android:layout_marginBottom="8dp"
-                android:src="@drawable/twitch" />
-
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="2dp"
-                android:background="@drawable/separator"
-                android:contentDescription="@string/separator" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:layout_marginBottom="8dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:src="@drawable/twitch"
+                    android:layout_weight="1" />
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
                     android:orientation="horizontal"
-                    android:layout_weight="1">
+                    android:gravity="center_vertical">
 
-                    <ImageView
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:scaleType="center"
-                        android:src="@drawable/viewers" />
-                    <TextView
-                        android:id="@+id/text_viewers"
-                        android:layout_width="wrap_content"
-                        android:layout_height="48dp"
-                        android:gravity="center"
-                        android:textSize="18sp"
-                        style="@style/textLight"/>
+                    <ImageButton
+                        android:id="@+id/btn_settings"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:background="@drawable/ic_settings"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"/>
+
+                    <ImageButton
+                        android:id="@+id/btn_quit"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:background="@drawable/ic_quit"
+                        android:contentDescription="@string/quit"
+                        android:textSize="48sp" />
+
 
                 </LinearLayout>
 
-
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:scaleType="center"
-                        android:src="@drawable/views" />
-                    <TextView
-                        android:id="@+id/text_views"
-                        android:layout_width="wrap_content"
-                        android:layout_height="48dp"
-                        android:gravity="center"
-                        android:textSize="18sp"
-                        style="@style/textLight" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="1">
-
-                    <ImageView
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:scaleType="center"
-                        android:src="@drawable/followers" />
-                    <TextView
-                        android:id="@+id/text_followers"
-                        android:layout_width="wrap_content"
-                        android:layout_height="48dp"
-                        android:gravity="center"
-                        android:textSize="18sp"
-                        style="@style/textLight"/>
-
-                </LinearLayout>
             </LinearLayout>
 
 
@@ -169,13 +105,94 @@
                 android:background="@drawable/separator"
                 android:contentDescription="@string/separator" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:scaleType="center"
+                        android:src="@drawable/viewers" />
+
+                    <TextView
+                        android:id="@+id/text_viewers"
+                        style="@style/textLight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        android:gravity="center"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:scaleType="center"
+                        android:src="@drawable/views" />
+
+                    <TextView
+                        android:id="@+id/text_views"
+                        style="@style/textLight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        android:gravity="center"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:scaleType="center"
+                        android:src="@drawable/followers" />
+
+                    <TextView
+                        android:id="@+id/text_followers"
+                        style="@style/textLight"
+                        android:layout_width="wrap_content"
+                        android:layout_height="48dp"
+                        android:gravity="center"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="2dp"
+                android:background="@drawable/separator"
+                android:contentDescription="@string/separator" />
+
             <TextView
                 android:id="@+id/text_chat"
+                style="@style/textLight"
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
-                android:scrollbars="vertical"
-                style="@style/textLight"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:scrollbars="vertical" />
 
             <ImageView
                 android:layout_width="fill_parent"
@@ -184,33 +201,34 @@
                 android:contentDescription="@string/separator" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_gravity="center_horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <EditText
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:hint="@string/send_message"
+                    android:id="@+id/text_chat_send"
+                    style="@style/edit_text"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
-                    android:id="@+id/text_chat_send"
                     android:layout_gravity="center_horizontal"
-                    style="@style/edit_text"
                     android:layout_weight="1"
+                    android:hint="@string/send_message"
                     android:imeActionLabel="@string/send"
-                    android:imeOptions="actionSend"/>
+                    android:imeOptions="actionSend"
+                    android:inputType="text"
+                    android:singleLine="true" />
+
 
                 <Button
+                    android:id="@+id/button_send"
                     style="@style/button"
                     android:layout_width="wrap_content"
                     android:layout_height="36dp"
-                    android:text="@string/send"
-                    android:id="@+id/button_send"
+                    android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"/>
+                    android:text="@string/send" />
             </LinearLayout>
 
         </LinearLayout>
